...
@Composable
fun UserDetailScreen(text: String?, viewModel: HomeViewModel, navController: NavHostController) {
    val mContext = LocalContext.current
    val isLoading =viewModel.isLoading.observeAsState()
    val userDetails = viewModel.userLiveData.observeAsState()

    Surface(modifier = Modifier.fillMaxSize().testTag("UserDetailTestTag")) {

        Column() {
            Box(
                modifier = Modifier
                    .fillMaxWidth()
                    .fillMaxHeight()
...
