...
        "Calendula",
        "Calendula helps reducing redness and healing up the skin and it is considered a medicinal plant.",
        R.drawable.calendula,
    ),
    Plant(
        4,
        "Lavender",
        "The lavender blossoms contain nurturing essential oils for the skin which have a balancing and soothing fragrance.",
        R.drawable.lavender,
    ),
    Plant(
        5,
        "Jojoba",
...
